# quadruple

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  conanfile.py
.github/workflows/: ubuntu-22-04.yaml
benchmarks/: CMakeLists.txt  benchmark_arithmetics.cpp  benchmark_conversion.cpp
source/: CMakeLists.txt  quadruple.cpp  quadruple.hpp  ub_consistency.hpp  utils.hpp
source/test_helpers/: test_utils.cpp  test_utils.hpp
test_helpers/: CMakeLists.txt  test_utils.cpp  test_utils.hpp
tests/: CMakeLists.txt  test_arithmetics.cpp  test_comparison.cpp  test_constexpr.cpp  test_conversion.cpp  test_utils.cpp  test_utils.hpp
